# LinRegLib

./: CMakeLists.txt  README.md
src/: linreg.cpp  linreg.h
test/: linreg_test.cpp
